2004-02-07  Ben Elliston  <bje@wasabisystems.com>

	* Makefile.am (pkgdata_SCRIPTS): Remove lib/mondfe, lib/xsh.exp.
	(config_SCRIPTS): Remove udi.exp, vrtx.exp.
	(baseboard_SCRIPTS): Remove a29k-udi.exp.
	* Makefile.in: Regenerate.
	* baseboards/a29k-udi.exp: Remove.
	* baseboards/dos.exp: Update comments.
	* config/udi.exp: Remove.
	* config/vrtx.exp: Remove.
	* doc/overview.sgml: Update. Don't mention mondfe and xsh support.
	* doc/ref.sgml: Likewise.
	* doc/user.sgml: Likewise.
	* lib/mondfe.exp: Remove.
	* lib/xsh.exp: Likewise.
	* lib/remote.exp: Don't load mondfe.exp or xsh.exp.
	* packaging/pkg/prototype: Update.
	* NEWS: Update.
	
2004-02-07  Ben Elliston  <bje@wasabisystems.com>
	
	* Makefile.am (rpmspec): Remove.
	(rpm): Additionally depend on dejagnu.spec.
	($(PKGDIR)/dejagnu): New target that installs DejaGnu into this
	directory.  This saves duplicated code in the solpkg and hpdepot
	targets.
	(solpkg): Depend on $(PKGDIR)/dejagnu.
	(hpdepot): Likewise.
	* Makefile.in: Regenerate.

2004-02-07  Ben Elliston  <bje@wasabisystems.com>

	* Makefile.am (RUNTEST, RUNTESTDEFAULTFLAGS): Remove.
	* Makefile.in: Regenerate.
	* testsuite/Makefile.am (CLEANFILES): Remove.
	(RUNTESTDEFAULTFLATS): Pass --srcdir and RUNTEST=$(RUNTEST).
	* testsuite/Makefile.in: Regenerate.
	
2004-02-07  Ben Elliston  <bje@wasabisystems.com>

	* lib/util-defs.exp: Move from here ..
	* testsuite/lib/util-defs.exp: .. to here.
	* Makefile.am (EXTRA_DIST): Remove lib/util-defs.exp.
	* Makefile.in: Regenerate.
	* testsuite/Makefile.am (EXTRA_DIST): Add lib/util-defs.exp.
	* testsuite/Makefile.in: Regenerate.
	* doc/ref.sgml (File Map): Remove util-defs.exp.
	* packaging/pkg/prototype: Update file list.

2004-02-07  Ben Elliston  <bje@wasabisystems.com>

	* NEWS: Document changes since 1.4.4.

2004-02-07  Ben Elliston  <bje@wasabisystems.com>

	* example/Makefile.am (check-recursive): Remove target.
	* example/Makefile.in: Regenerate.

2004-02-07  Ben Elliston  <bje@wasabisystems.com>
